# AdventOfCode2019

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: codeql-analysis.yml
day01/: CMakeLists.txt  day01.cpp
day02/: CMakeLists.txt  day02.cpp
day03/: CMakeLists.txt  day03  day03.cpp
day04/: CMakeLists.txt  day04.cpp
day05/: CMakeLists.txt  day05.cpp
day06/: day06.cpp
day07/: CMakeLists.txt  day07.cpp
day08/: CMakeLists.txt  day08.cpp
day09/: CMakeLists.txt
day09/src/: day09.cpp
day10/: CMakeLists.txt
day10/src/: day10.cpp
day11/: CMakeLists.txt
day11/src/: day11.cpp
day12/: CMakeLists.txt  planets.csv  planets2.csv
day12/python/: find_periods.ipynb
day12/src/: day12.cpp
day13/: CMakeLists.txt
day13/src/: day13.cpp
day14/: CMakeLists.txt
day14/input/: input_14_test3.txt
day14/src/: day14.cpp
day15/: CMakeLists.txt
day15/src/: day15.cpp
day16/: CMakeLists.txt
day16/src/: day16.cpp
day17/: CMakeLists.txt
day17/src/: day17.cpp
day18/: CMakeLists.txt
day18/input/: input_18_4.txt  input_18_part2.txt
day18/src/: day18.cpp  day18a.cpp
day18/tests/: CMakeLists.txt  day18_test.cpp
day19/: CMakeLists.txt
day19/src/: day19.cpp
day20/: CMakeLists.txt
day20/input/: input_20_test2.txt
day20/src/: day20.cpp
day21/: CMakeLists.txt
day21/src/: day21.cpp
day22/: CMakeLists.txt
day22/input/: input_22_test1.txt
day22/src/: day22.cpp
day23/: CMakeLists.txt
day23/src/: day23.cpp
day24/: CMakeLists.txt
day24/src/: day24.cpp
day25/: CMakeLists.txt
day25/src/: day25.cpp
